[project]
name = "pubmed-feature"
version = "0.1.0"
description = "Fetch PubMed papers with pharmaceutical/biotech company affiliations"
authors = [
    {name = "IshaNITM", email = "ishap6971@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
    "lxml (>=5.3.1,<6.0.0)"
]

[project.scripts]
get-papers-list = "cli.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pubmed-feature"
version = "0.1.0"
description = "Fetch PubMed papers with pharmaceutical/biotech company affiliations"
authors = ["IshaNITM <ishap6971@gmail.com>"]
packages = [
    {include = "backend"},
    {include = "cli"}
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.0"
requests = "^2.32.0"
beautifulsoup4 = "^4.12.0"
python-dotenv = "^1.0.0"
typing-extensions = "^4.0.0"
lxml = "^5.3.1"

[tool.poetry.scripts]
get-papers-list = "cli.cli:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/IshaNITM/pubmed-feature/issues"
"Repository" = "https://github.com/IshaNITM/pubmed-feature"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

